# puzzle-solver-api

./: .gitignore  404.html  Dockerfile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
architecture/: index.html
csp/: index.html
docs/: architecture.md  index.md  search.md  setup.md
docs/reference/: api.md  reference.md  solver.md
reference/api/: index.html
reference/reference/: index.html
reference/solver/: index.html
reference/subscription/: index.html
search/: index.html  search_index.json
setup/: index.html
src/: config.py  main.py
src/api/: main.py
src/api/repository/: exceptions.py  models.py  rabbitmq_repository.py  redis_repository.py
src/api/routes/: puzzle.py  status.py
src/api/service/: puzzle_service.py
src/routes/: puzzle.py  status.py  subscription.py  user.py
src/solver/: solver.py
src/solver/search/: search_problem.py  ucs.py
src/solvers/: solver.py
