[tool.poetry]
name = "puzzle-solver-api"
version = "0.1.0"
description = "A puzzle solver api (FastAPI Framework) via CSP and search ah"
authors = ["giraycoskun <giraycoskun@sabanciuniv.edu>"]
license = "MIT"
readme = "README.md"
packages = [{include = "puzzle_solver_api"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
mkdocs-material = "^9.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
