[tool.poetry]
name = "puzzle-solver-api"
version = "0.1.0"
description = "A puzzle solver api (FastAPI Framework) via CSP and search algorithms."
authors = ["giraycoskun <giraycoskun@sabanciuniv.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.0"
uvicorn = "^0.21.1"
loguru = "^0.6.0"
pika = "^1.3.1"
python-dotenv = "^1.0.0"
pydantic = "^1.10.7"
redis = "^4.5.4"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"
autopep8 = "^2.0.2"
watchfiles = "^0.19.0"


[tool.poetry.group.docs.dependencies]
mkdocstrings = "^0.21.0"
mkdocs = "^1.4.2"
mkdocs-material = "^9.1.5"
mkdocstrings-python = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
